src/test/ui/issues/issue-50585.stderr
error[E0744]: `for` is not allowed in a `const`
  --> $DIR/issue-50585.rs:2:18
   |
LL |     |y: Vec<[(); for x in 0..2 {}]>| {};
   |                  ^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/issue-50585.rs:2:18
   |
LL |     |y: Vec<[(); for x in 0..2 {}]>| {};
   |                  ^^^^^^^^^^^^^^^^ expected usize, found ()
   |
   = note: expected type `usize`
              found type `()`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0744.
For more information about an error, try `rustc --explain E0308`.
